[metadata]
name = strkitN
version = 1.0.0
author = Swayam Patil
author_email = swayampatil7803@gmail.com
description = A powerful and versatile Python package for string manipulation with enhanced functionality.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Swish78/strkitN
license = MIT

[options]
packages = strkitN
install_requires =
    re
    string

[options.packages.find]
exclude =
    tests
    docs

[options.entry_points]
console_scripts =
    strkitN = strkitN.main:main

[bdist_wheel]
universal = true
